syntax = "proto3";
package message;
import "utils/actor/actor.proto"; // we need to import actor.proto, so our messages can include PID's

option go_package = "github.com/liov/hoper/go/v2/actor/message";

message Connect {
    actor.PID Sender = 1;
}

message Connected {
    string Message = 1;
}

message SayRequest {
    string UserName = 1;
    string Message = 2;
}

message SayResponse {
    string UserName = 1;
    string Message = 2;
}

message NickRequest {
    string OldUserName = 1;
    string NewUserName = 2;
}

message NickResponse {
    string OldUserName = 1;
    string NewUserName = 2;
}